--- a/Form Scrolling Test/components/home/view.html
+++ b/Form Scrolling Test/components/home/view.html
@@ -12,6 +12,36 @@
                         <input data-bind="value: homeModel.fields.cvc" placeholder="XXX" type="password">
                     </label>
                 </li>
+                <li>
+                    <label>Cardholder
+                        <input data-bind="value: homeModel.fields.cardholder" placeholder="johndoe" type="text">
+                    </label>
+                </li>
+                <li>
+                    <label>Security code
+                        <input data-bind="value: homeModel.fields.cvc" placeholder="XXX" type="password">
+                    </label>
+                </li>
+                <li>
+                    <label>Cardholder
+                        <input data-bind="value: homeModel.fields.cardholder" placeholder="johndoe" type="text">
+                    </label>
+                </li>
+                <li>
+                    <label>Security code
+                        <input data-bind="value: homeModel.fields.cvc" placeholder="XXX" type="password">
+                    </label>
+                </li>
+                <li>
+                    <label>Cardholder
+                        <input data-bind="value: homeModel.fields.cardholder" placeholder="johndoe" type="text">
+                    </label>
+                </li>
+                <li>
+                    <label>Security code
+                        <input data-bind="value: homeModel.fields.cvc" placeholder="XXX" type="password">
+                    </label>
+                </li>
             </ul>
 
             <div class="button-group">
@@ -22,6 +52,9 @@
         <!-- START_CUSTOM_CODE_homeModel -->
         <!-- END_CUSTOM_CODE_homeModel -->
     </div>
-    <!-- START_CUSTOM_CODE_home -->
-    <!-- END_CUSTOM_CODE_home -->
+    <footer data-role="footer">
+        <div class="button-group">
+            <a data-role="button" data-bind="events: { click: homeModel.cancel }">Some button</a>
+        </div>
+    </footer>
 </div>
